--- a/index.html
+++ b/index.html
@@ -77,7 +77,44 @@
     </form>
   </div>
 
+  
   <div class="section" id="content-en">
+    <h2>What do we offer?</h2>
+    <p>Automate analysis, writing, advisory and repetitive tasks with personalized AI agents that work for you 24/7.</p>
+    <h2>Available Plans</h2>
+    <div class="plans">
+      <div class="plan">
+        <h3>Basic Plan – €99/month</h3>
+        <ul>
+          <li>Up to 3 personalized agents</li>
+          <li>Shared hosting included</li>
+          <li>Email support</li>
+          <li>1 minor update every 6 months</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Pro Plan – €179/month</h3>
+        <ul>
+          <li>Up to 5 intelligent agents</li>
+          <li>Optimized hosting included</li>
+          <li>Support via WhatsApp and email</li>
+          <li>1 minor update per quarter</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Premium Plan – €299/month</h3>
+        <ul>
+          <li>Up to 8 advanced AI agents</li>
+          <li>Dedicated hosting</li>
+          <li>Priority support</li>
+          <li>1 update per month included</li>
+          <li>Custom domain</li>
+        </ul>
+      </div>
+    </div>
+    <p class="note">* Premium hosting may incur additional costs depending on the resources required.</p>
+    <h2>Contact</h2>
+
     <h2>What do we offer?</h2>
     <p>Automate analysis, writing, advisory and repetitive tasks with personalized AI agents that work for you 24/7.</p>
     <h2>Plans</h2>
@@ -91,7 +128,44 @@
     </form>
   </div>
 
+  
   <div class="section" id="content-it">
+    <h2>Cosa offriamo?</h2>
+    <p>Automatizza analisi, scrittura, consulenza e attività ripetitive con agenti IA personalizzati che lavorano per te 24/7.</p>
+    <h2>Piani disponibili</h2>
+    <div class="plans">
+      <div class="plan">
+        <h3>Piano Base – €99/mese</h3>
+        <ul>
+          <li>Fino a 3 agenti personalizzati</li>
+          <li>Hosting condiviso incluso</li>
+          <li>Supporto via email</li>
+          <li>1 modifica minore ogni 6 mesi</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Piano Pro – €179/mese</h3>
+        <ul>
+          <li>Fino a 5 agenti intelligenti</li>
+          <li>Hosting ottimizzato incluso</li>
+          <li>Supporto via WhatsApp e email</li>
+          <li>1 modifica minore per trimestre</li>
+        </ul>
+      </div>
+      <div class="plan">
+        <h3>Piano Premium – €299/mese</h3>
+        <ul>
+          <li>Fino a 8 agenti IA avanzati</li>
+          <li>Hosting dedicato</li>
+          <li>Supporto prioritario</li>
+          <li>1 modifica mensile inclusa</li>
+          <li>Dominio personalizzato</li>
+        </ul>
+      </div>
+    </div>
+    <p class="note">* L'hosting premium può comportare costi aggiuntivi in base alle risorse richieste.</p>
+    <h2>Contatto</h2>
+
     <h2>Cosa offriamo?</h2>
     <p>Automatizza analisi, scrittura, consulenza e attività ripetitive con agenti IA personalizzati che lavorano per te 24/7.</p>
     <h2>Piani</h2>
